--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExamensArbete.NoActionBar">
-        <activity android:name=".Screens.SignUp"></activity>
+        <activity android:name=".Screens.Categories"></activity>
+        <activity android:name=".Screens.SignUp" />
         <activity
             android:name=".Screens.LogIn"
             android:theme="@style/Theme.ExamensArbete.NoActionBar">
@@ -20,9 +21,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Screens.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ExamensArbete.NoActionBar"></activity>
+            android:theme="@style/Theme.ExamensArbete.NoActionBar" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
