--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 apply plugin: 'com.google.gms.google-services'
@@ -36,6 +37,15 @@ android {
 
 dependencies {
 
+    def room_version = "2.3.0"
+
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$room_version")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -45,7 +55,25 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:22.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
+
+    //Viewmodel imports
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.activity:activity-ktx:1.1.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+
+
+
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.2.0"
+
+
+
+
     testImplementation 'junit:junit:4.+'
+    testImplementation("junit:junit:4.12")
+
+
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
